Update instruction manual

--- a/src/main/resources/assets/grimindustry/lang/en_US.lang
+++ b/src/main/resources/assets/grimindustry/lang/en_US.lang
@@ -112,43 +112,38 @@ item.steel_sword.name=Steel Sword
 
 #================= INSTRUCTION MANUAL =================#
 grim.manual.grimindustry.modinfo=Adds a bunch of tech stuff.
-grim.manual.grimindustry.subsection.gravity=Gravity Control
-grim.manual.grimindustry.subsection.gravity.page.control=There are two different types of gravity controllers. The Low Gravity Controller will reduce gravity to allow you to jump higher. The regular Gravity Controller will make all entities start to float upward into the sky (including you unless you have a Gravity Anchor). All entities that fly will take fall damage if they get high enough. Just right click on a controller to activate.
+grim.manual.grimindustry.subsection.gravity=Gravity 
+grim.manual.grimindustry.subsection.gravity.page.boots=Gravity Boots are made so that while wearing them you will not be effected by any of the different blocks when they are active. So you will be able to freely move around. 
+grim.manual.grimindustry.subsection.gravity.page.boots.title=Boots
+grim.manual.grimindustry.subsection.gravity.page.control=There are two different types of gravity controllers. The Low Gravity Controller will reduce gravity to allow you to jump higher. The regular Gravity Controller will make all entities start to float upward into the sky (including you unless you have Gravity Boots). All entities that fly will take fall damage if they get high enough. Right click to activate.
 grim.manual.grimindustry.subsection.gravity.page.control.title=Controllers
-grim.manual.grimindustry.subsection.toggle=Toggle Rack
-grim.manual.grimindustry.subsection.toggle.page.recipe=The Toggle Rack block when powered by redstone spawns fire above the block and when powered indirectly too.
-grim.manual.grimindustry.subsection.toggle.page.recipe.title=Recipe
-grim.manual.grimindustry.subsection.benches=Workbench Upgrades
-grim.manual.grimindustry.subsection.benches.page.recipes=The two new Workbenches added are made out of Iron and Diamond. The Iron will double your output from crafting and the Diamond will quadruple the output.
-grim.manual.grimindustry.subsection.benches.page.recipes.title=Recipes
-grim.manual.grimindustry.subsection.ice=Ice Maker
-grim.manual.grimindustry.subsection.ice.page.recipes=Using a bucket of water you will be able to create ice using the Ice Maker. Once crafted right click on the Ice Maker with a Bowl of Water and the water will start the freezing process give it some time and once done it will have the texture of ice on top. Punch it to get your ice.
-grim.manual.grimindustry.subsection.ice.page.recipes.title=Recipes
+grim.manual.grimindustry.subsection.gravity.page.attract=Their are two types of attractors the regular Attractor and the Directional Attractor. When powered the regular Attractor will start to pull in entities around it with a range of 12 blocks. The Directional Attractor is different because only the side with the attractor end will attract entities. 
+grim.manual.grimindustry.subsection.gravity.page.attract.title=Attractors
+grim.manual.grimindustry.subsection.gravity.page.repulse=Their are two types of repulsors the regular Repulsor and the Directional Repulsor. When powered the regular Repulsor will start to push entities away with a range of 12 blocks. The Directional Repulsor is different because only the side with the repulsor end will push entities. 
+grim.manual.grimindustry.subsection.gravity.page.repulse.title=Repulsors
+grim.manual.grimindustry.subsection.gravity.page.gravitor=Their are two types of gravitors the regular Gravitor and the Directional Gravitor. When powered the regular Gravitor will start to make entities around it float into the air. The Directional Gravitor is different because only the side with the gravitor end will make entities float into the air. 
+grim.manual.grimindustry.subsection.gravity.page.gravitor.title=Gravitors
 grim.manual.grimindustry.subsection.elemental=Elemental Blocks
+grim.manual.grimindustry.subsection.elemental.page.toggle=The Toggle Rack block when powered by redstone spawns fire above the block and when powered indirectly too. This is pretty much the same as the Elemental fire block.
+grim.manual.grimindustry.subsection.elemental.page.toggle.title=Toggle Rack
 grim.manual.grimindustry.subsection.elemental.page.fire=This elemental block when activated by redstone spawns fire above the block, when deactivated the fire gets removed.
 grim.manual.grimindustry.subsection.elemental.page.fire.title=Fire
 grim.manual.grimindustry.subsection.elemental.page.water=This elemental block when activated by redstone spawns a block of water above the block, when deactivated the water gets removed.
 grim.manual.grimindustry.subsection.elemental.page.water.title=Water
 grim.manual.grimindustry.subsection.elemental.page.lava=This elemental block when activated by redstone spawns a block of lava above the block, when deactivated the lava gets removed.
 grim.manual.grimindustry.subsection.elemental.page.lava.title=Lava
+grim.manual.grimindustry.subsection.benches=Workbench Upgrades
+grim.manual.grimindustry.subsection.benches.page.recipes=The two new Workbenches added are made out of Iron and Diamond. The Iron will double your output from crafting and the Diamond will quadruple the output.
+grim.manual.grimindustry.subsection.benches.page.recipes.title=Recipes
+grim.manual.grimindustry.subsection.ice=Ice Maker
+grim.manual.grimindustry.subsection.ice.page.recipes=Using a bucket of water you will be able to create ice using the Ice Maker. Once crafted right click on the Ice Maker with a Bowl of Water and the water will start the freezing process give it some time and once done it will have the texture of ice on top. Punch it to get your ice.
+grim.manual.grimindustry.subsection.ice.page.recipes.title=Recipes
 grim.manual.grimindustry.subsection.spikes=Spikes
 grim.manual.grimindustry.subsection.spikes.page.recipe=Spikes can be placed on all 6 sides of a block and can be controlled by redstone. When active they deal a large amount of damage and when inactive they shrink into the ground and do no damage.
 grim.manual.grimindustry.subsection.spikes.page.recipe.title=Recipe
 grim.manual.grimindustry.subsection.sensors=Sensors
 grim.manual.grimindustry.subsection.sensors.page.recipes=Their are 4 different sensors added, Wood, Stone, Iron, and Netherrack. The Wood detects all entities, the Stone detects all living entities, the Iron detects only the player, and the Netherrack detects all hostile entities. A red light will appear if an entity is detected and then it will emit a redstone signal. 
 grim.manual.grimindustry.subsection.sensors.page.recipes.title=Recipes
-grim.manual.grimindustry.subsection.attract=Attractors
-grim.manual.grimindustry.subsection.attract.page.recipe=Their are two types of attractors the regular Attractor and the Directional Attractor. When powered the regular Attractor will start to pull in entities around it with a range of 12 blocks. The Directional Attractor is different because only the side with the attractor end will attract entities. 
-grim.manual.grimindustry.subsection.attract.page.recipe.title=Recipes
-grim.manual.grimindustry.subsection.repulse=Repulsors
-grim.manual.grimindustry.subsection.repulse.page.recipe=Their are two types of repulsors the regular Repulsor and the Directional Repulsor. When powered the regular Repulsor will start to push entities away with a range of 12 blocks. The Directional Repulsor is different because only the side with the repulsor end will push entities. 
-grim.manual.grimindustry.subsection.repulse.page.recipe.title=Recipes
-grim.manual.grimindustry.subsection.gravitor=Gravitors
-grim.manual.grimindustry.subsection.gravitor.page.recipe=Their are two types of gravitors the regular Gravitor and the Directional Gravitor. When powered the regular Gravitor will start to make entities around it float into the air. The Directional Gravitor is different because only the side with the gravitor end will make entities float into the air. 
-grim.manual.grimindustry.subsection.gravitor.page.recipe.title=Recipes
-grim.manual.grimindustry.subsection.boots=Gravity Boots
-grim.manual.grimindustry.subsection.boots.page.recipe=Gravity Boots are made so that while wearing them you will not be effected by any of the different blocks when they are active. So you will be able to freely move around. 
-grim.manual.grimindustry.subsection.boots.page.recipe.title=Recipe
 grim.manual.grimindustry.subsection.refining=Refining
 grim.manual.grimindustry.subsection.refining.page.uranium=Uranium Ore can be found naturally below the surface in small clusters but if you are in old chunks or you just want to craft some their is a recipe. But be careful because it will hurt you when mining it unless you have a radiation suit.
 grim.manual.grimindustry.subsection.refining.page.uranium.title=Uranium Ore
@@ -226,7 +221,7 @@ grim.manual.grimindustry.subsection.metalworks.page.steeltools=Also added in thi
 grim.manual.grimindustry.subsection.metalworks.page.steeltools.title=Steel Tools
 grim.manual.grimindustry.subsection.metalworks.page.fuel=To power the Modern Furnace you will need Fuel. Fuel can't be crafted but needs to be refined and to get something to refine you can craft Super Crude Oil which is made from Oily Chunks and Aluminium Cans. You can get oily chunks from mining Black Gold Ore which is another ore that is randomly generated.
 grim.manual.grimindustry.subsection.metalworks.page.fuel.title=Fuel
-grim.manual.grimindustry.subsection.metalworks.page.refinery=To start refining to get fuel you will need the Refinery. The Refinery by default has 3 recipes which you just need to put them in the first slot. They are Dirt --> Clay Ball, Super Crude Oil --> Crude Oil, and Crude Oil --> Fuel. 
+grim.manual.grimindustry.subsection.metalworks.page.refinery=To start refining to get fuel you will need the Refinery. The Refinery's default recipes are Dirt --> Clay Ball, Super Crude Oil --> Crude Oil, Crude Oil --> Fuel, and log --> Rubber. 
 grim.manual.grimindustry.subsection.metalworks.page.refinery.title=Refinery
 grim.manual.grimindustry.subsection.metalworks.page.derrick=Another machine added is the Oil Derrick. The Oil Derrick can extract oil from the Black Gold Ore itself. To start using just place it on the ore, it can't be placed anywhere else. Then put some Aluminium Cans in and it will start slowly extracting crude oil.
 grim.manual.grimindustry.subsection.metalworks.page.derrick.title=Derrick
